--- a/zachdanielsanalytics/zdanalytics/templates/base.html
+++ b/zachdanielsanalytics/zdanalytics/templates/base.html
@@ -2,8 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>ZD Analytics - {% block title %}{% endblock %}</title>
+    <title>{% block title %}{% endblock %}</title>
 </head>
+<body>
+<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+<nav>
+    <ul>
+        <li><a>About</a></li>
+        <li><a href="{{ url_for('baseball.search') }}">Baseball</a></li>
+        <li><a id="logo" href="{{ url_for('home.home') }}">ZSD Analytics</a></li>
+    </ul>
+</nav>
 <section>
     <header>
         {% block header %}{% endblock %}
@@ -13,4 +22,5 @@
     {% endfor %}
     {% block content %}{% endblock %}
 </section>
+</body>
 </html>
